# strangeraft

./: Cargo.toml
lib/stores/memstore/: Cargo.toml  README.md
tests/: Cargo.toml
tests/tests/append_entries/: t10_conflict_with_empty_entries.rs  t10_see_higher_vote.rs  t11_append_conflicts.rs  t11_append_entries_with_bigger_term.rs  t11_append_inconsistent_log.rs  t11_append_updates_membership.rs  t30_replication_1_voter_to_isolated_learner.rs  t60_enable_heartbeat.rs  t61_heartbeat_reject_vote.rs  t61_large_heartbeat.rs  t90_issue_216_stale_last_log_id.rs
tests/tests/client_api/: t10_client_writes.rs  t11_client_reads.rs  t12_trigger_purge_log.rs  t13_begin_receiving_snapshot.rs  t13_get_snapshot.rs  t13_install_full_snapshot.rs  t13_trigger_snapshot.rs  t14_transfer_leader.rs  t16_with_raft_state.rs  t16_with_state_machine.rs  t50_lagging_network_write.rs  t51_write_when_leader_quit.rs
tests/tests/elect/: t10_elect_compare_last_log.rs  t11_elect_seize_leadership.rs
tests/tests/fixtures/: mod.rs
tests/tests/life_cycle/: t10_initialization.rs  t11_shutdown.rs  t50_follower_restart_does_not_interrupt.rs  t50_leader_restart_clears_state.rs  t50_single_follower_restart.rs  t50_single_leader_restart_re_apply_logs.rs  t90_issue_607_single_restart.rs  t90_issue_920_non_voter_leader_restart.rs
tests/tests/log_store/: t10_save_committed.rs
tests/tests/management/: t10_raft_config.rs
tests/tests/membership/: t10_learner_restart.rs  t10_single_node.rs  t11_add_learner.rs  t12_concurrent_write_and_add_learner.rs  t20_change_membership.rs  t21_change_membership_cases.rs  t30_commit_joint_config.rs  t30_elect_with_new_config.rs  t31_add_remove_follower.rs  t31_remove_leader.rs  t31_removed_follower.rs  t51_remove_unreachable_follower.rs  t52_change_membership_on_uninitialized_node.rs  t99_issue_471_adding_learner_uses_uninit_leader_id.rs  t99_issue_584_replication_state_reverted.rs  t99_new_leader_auto_commit_uniform_config.rs
tests/tests/metrics/: t10_current_leader.rs  t10_leader_last_ack.rs  t10_purged.rs  t10_server_metrics_and_data_metrics.rs  t20_metrics_state_machine_consistency.rs  t30_leader_metrics.rs  t40_metrics_wait.rs
tests/tests/replication/: t10_append_entries_partial_success.rs  t50_append_entries_backoff.rs  t50_append_entries_backoff_rejoin.rs  t51_append_entries_too_large.rs  t60_feature_loosen_follower_log_revert.rs  t61_allow_follower_log_revert.rs  t62_follower_clear_restart_recover.rs
tests/tests/snapshot_building/: t10_build_snapshot.rs  t11_snapshot_builder_control.rs  t35_building_snapshot_does_not_block_append.rs  (+2 more)
(+130 files in other folders)
